tests/ui/feature-gates/feature-gate-link_cfg.rs
#[link(name = "foo", cfg(foo))]
//~^ ERROR: is unstable
extern "C" {}

fn main() {}
